--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>Gestão de Cartório</title>
     <meta charset="UTF-8">
+    <title>Início</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gestão de Cartório</h1>
-    <p>Coordenador de Qualidade com 9 anos de experiência, focado em eficiência, automação e dados no setor cartorário.</p>
+    <header>
+        <h1>Gestão de Cartório</h1>
+        <p>Qualidade • Inovação • Dados</p>
+    </header>
     <nav>
-        <a href="about.html">Sobre</a> | <a href="projects.html">Projetos</a> | <a href="contact.html">Contato</a>
+        <a href="index.html">Início</a>
+        <a href="about.html">Sobre</a>
+        <a href="projects.html">Projetos</a>
+        <a href="contact.html">Contato</a>
     </nav>
+    <main>
+        <p>Coordenador de Qualidade com 9 anos de experiência, focado em eficiência, automação e dados no setor cartorário.</p>
+    </main>
 </body>
 </html>
