--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,27 @@
-
 <!DOCTYPE html>
-<html>
-<head><title>Contato</title></head>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Contato</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <h1>Contato</h1>
-    <p>Email: seuemail@exemplo.com</p>
-    <p>LinkedIn: linkedin.com/in/seuperfil</p>
+    <header>
+        <h1>Gestão de Cartório</h1>
+        <p>Qualidade • Inovação • Dados</p>
+    </header>
+    <nav>
+        <a href="index.html">Início</a>
+        <a href="about.html">Sobre</a>
+        <a href="projects.html">Projetos</a>
+        <a href="contact.html">Contato</a>
+    </nav>
+    <main>
+        
+<h2>Contato</h2>
+<p>Email: seuemail@exemplo.com</p>
+<p>LinkedIn: linkedin.com/in/seuperfil</p>
+
+    </main>
 </body>
 </html>
